--- a/login.html
+++ b/login.html
@@ -420,7 +420,7 @@ body {
     
       <button onclick="login()" class="rounded-button login-cta">Login</button>
 
-      <div class="register-div">Not registered yet? <a class="link create-account"onclick="register()">Create an account ?</a></div>
+      <!-- <div class="register-div">Not registered yet? <a class="link create-account"onclick="register()">Create an account ?</a></div> -->
     </div>
 
   </div>
