Refactor index.html layout and styles
Updated layout and styles for user list and chat sections.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 body{background:#ece5dd;height:100vh}
 
 .app{
-  max-width:900px;
+  max-width:100%;
   height:100vh;
   margin:auto;
   display:flex;
@@ -21,7 +21,7 @@ body{background:#ece5dd;height:100vh}
 
 /* USERS */
 .users{
-  width:30%;
+  width:20%;
   border-right:1px solid #ddd;
   overflow-y:auto;
 }
@@ -39,7 +39,7 @@ body{background:#ece5dd;height:100vh}
 
 /* CHAT */
 .msger{
-  width:70%;
+  width:80%;
   display:flex;
   flex-direction:column;
 }
@@ -200,3 +200,4 @@ logoutBtn.onclick=()=>auth.signOut();
 
 </body>
 </html>
+
