--- a/login.html
+++ b/login.html
@@ -408,15 +408,8 @@ body {
       </div>
       <div class="login-form-group">
         <label for="pwd">Password <span class="required-star">*</span></label>
-        <input autocomplete="off" type="password" id="password" required placeholder="Minimum 8 characters" id="pwd">
+        <input autocomplete="off" type="password" id="password" required placeholder="Minimum 8 characters" >
       </div>
-
-      <div class="login-form-group single-row">
-        <div class="custom-check">
-          <input autocomplete="off" type="checkbox" checked id="remember"><label for="remember">Remember me</label>
-        </div>
-      </div>
-
     
       <button onclick="login()" class="rounded-button login-cta">Login</button>
 
